--- a/index.html
+++ b/index.html
@@ -7,10 +7,43 @@
     <meta name="description" content="Recruitment Task - AWWW Software. This website has been created with passion to code.">
     <meta name="keywords" content="AWWW, layout, HTML, CSS, JS, RWD">
     <title>Task AWWW</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
+   
+    <!--  HEADER  -->
+    <header>
+        <nav class="menu">
+            <img src="images/menu-logo/menu-logo.png" class="menu__logo">
+            <ul class="menu__nav">
+                <li class="menu__nav__item"><a href="#" class="menu__nav__item__link">About us</a></li>
+                <li class="menu__nav__item"><a href="#" class="menu__nav__item__link">Services</a></li>
+                <li class="menu__nav__item"><a href="#" class="menu__nav__item__link">Case studies</a></li>
+                <li class="menu__nav__item"><a href="#" class="menu__nav__item__link menu__nav__item__link--border">Contact</a></li>
+            </ul>
+        </nav>
+        <container class="content">
+            <div class="content__box">
+                <h1>We create websites<br>and eCommerce</h1>
+                <p class="content__box__paragraph">Wordpress & WooCommerce Software House</p>
+                <div class="content__box__btn">
+                    <button class ="btn" type="button">What we do?</button>
+                    <button class ="btn" type="button">Watch team video</button>
+                </div>
+            </div>
+            <div class="content__brand">
+                <img src="images/content-logo/logo-Lotto.png" class="content__brand__img" alt="logo Lotto">
+                <img src="images/content-logo/logo-Lotto.png" class="content__brand__img" alt="logo Lotto">
+                <img src="images/content-logo/logo-Lotto.png" class="content__brand__img" alt="logo Lotto">
+                <img src="images/content-logo/logo-Lotto.png" class="content__brand__img" alt="logo Lotto">
+                <img src="images/content-logo/logo-Lotto.png" class="content__brand__img" alt="logo Lotto">
+                <img src="images/content-logo/logo-Lotto.png" class="content__brand__img" alt="logo Lotto">
+            </div>
+        </container>
+    </header>
+    <main></main>
+    <footer></footer>
     <script src="js/script.js"></script>
 </body>
 </html>
