Create SECOND CONTAINER - Offer & add RWD

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <!--  Jumbotron - buttons  -->
                 <div class="content__box__btn">
                     <button class ="btn" type="button">
-                        <a href="#wfirst__container">What we do?</a>
+                        <a href="#first__container">What we do?</a>
                     </button>
                     <button class ="btn" type="button">
                         <a href="#">Watch team video</a>
@@ -96,11 +96,55 @@
         <!--  FIRST CONTAINER - What we do  -->
         <section id="first__container">
             <div class="first__container__image">
-                <img src="images/first-section/what_we_do.png" alt="logo what we do">
+                <img src="images/first-container/what_we_do.png" alt="logo what we do">
             </div>
             <div class="first__container__text">
                 <h2>What we do</h2>
                 <p>Budujemy marki. Pomysły i plany zmieniamy w rzeczywistość. Projektujemy i realizujemy kompleksowe kampanie oraz pojedyncze działania dla produktów, usług i marek. Tworzymy identyfikację wizualną i komunikację. Wdrażamy nowe rozwiązania i usprawniamy te, które mogą działać lepiej. Wiemy, że odważne pomysły czynią marki sławnymi.</p>
+            </div>
+        </section>
+        
+        <!--  SECOND CONTAINER - Offer  -->
+        <section id="second__container">
+            <div class="second__container__box">
+               <div class="second__container__box__content"> 
+                   <div class="second__container__box__content__image">
+                        <img src="images/second-container/web.svg" alt="Web Development">
+                    </div>
+                    <h3>Web<br>Development</h3>
+                    <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspen disse a pellen.</p>
+                </div>
+                <button type="button"><a href="#">Read More <img src="images/icon/arrow-right.png"></a></button>
+            </div>
+            <div class="second__container__box">
+               <div class="second__container__box__content"> 
+                   <div class="second__container__box__content__image">
+                        <img src="images/second-container/mobile.svg" alt="Mobile Development">
+                    </div>
+                    <h3>Mobile<br>Development</h3>
+                    <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspen disse a pellen.</p>
+                </div>
+                <button type="button"><a href="#">Read More <img src="images/icon/arrow-right.png"></a></button>
+            </div>
+            <div class="second__container__box">
+               <div class="second__container__box__content"> 
+                   <div class="second__container__box__content__image">
+                        <img src="images/second-container/product.svg" alt="Product Design">
+                    </div>
+                    <h3>Product<br>Design</h3>
+                    <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspen disse a pellen.</p>
+                </div>
+                <button type="button"><a href="#">Read More <img src="images/icon/arrow-right.png"></a></button>
+            </div>
+            <div class="second__container__box">
+               <div class="second__container__box__content"> 
+                   <div class="second__container__box__content__image">
+                        <img src="images/second-container/staff.svg" alt="Staff Augmenation">
+                    </div>
+                    <h3>Staff<br>Augmenation</h3>
+                    <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspen disse a pellen.</p>
+                </div>
+                <button type="button"><a href="#">Read More <img src="images/icon/arrow-right.png"></a></button>
             </div>
         </section>
         
